@@ -1,3 +1,7 @@
+2017-07-11  Markus Gans  <guru.mail@muenster.de>
+	* New class FTermBuffer to buffer terminal outputs
+	* Add the possibility to print from the terminal buffer
+
 2017-07-03  Markus Gans  <guru.mail@muenster.de>
 	* Use more static const variables where it makes sense
 
